# C-TextEditor

./: .gitignore  C-TextEditor.geany  CMakePresets.json  CMakelists.txt  README.md  build.bash  build.sh  build.txt  main.c  window.c
GUI_Library/: main.c
GUI_Library/raygui-4.0/src/: raygui.c
GUI_Library/raygui/src/: raygui.h
src/: CMakeLists.txt  main.c  manager.c  manager.h  window.c  window.h
src/dataStructures/: a.sh  exe  gapBuffer.c  gapBuffer.h  linkedList.c  test.c
src/dataStructures/hashMap/: hashMap.c  hashMap.h  test.c  test.sh
src/dataStructures/linkedList/: linkedList.c  linkedList.h  test.c
src/events/: event.c  event.h
src/graphics/: button.c  button.h  character.c  character.h  color.c  color.h  fileContents.c  fileContents.h  line.c  line.h  output  rectangle.c  rectangle.h  renderer.c  renderer.h  test.c  test.sh  window.c  window.h
src/state/: cursor.c  cursor.h
